# Structura

./: .gitignore  COURSE_GENERATION_PIPELINE.md  INTEGRATION_CHECKLIST.md  INTEGRATION_GUIDE.md  INTEGRATION_PROMPT.md  README.md  README_DELIVERABLES.md  UPLOAD_DEBUGGING_GUIDE.md  chat.py  floating-chatbot.tsx  page.tsx  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: health.py
backend/app/api/v1/: __init__.py  chat.py  courses.py  documents.py  lessons.py  user.py
backend/app/common/: course_style.py  exceptions.py  llm_client.py  schema_base.py  text_utils.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  course_models.py
backend/app/pipeline/: orchestrator.py  repair_loop.py
backend/app/prompts/: registry.py
backend/app/prompts/anti_hallucination/: grounding.py
backend/app/repositories/: document.py
backend/app/schemas/: __init__.py  course.py  document.py  extracted_document.py
backend/app/services/: chunk_service.py  course_builder_service.py  course_generation_service.py  course_planner_service.py  document.py  document_processing_service.py  document_statistics_service.py  extracted_text_export_service.py  lesson_generation_service.py  text_cleaning_service.py
backend/tests/: conftest.py  test_health.py  test_prompts.py
docs/: API.md  (+7 more)
(+212 files in other folders)
