[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service"
requires-python = ">=3.12,<3.14"
readme = "README.md"

dependencies = [
    "fastapi>=0.136.0,<0.137.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
    "alembic>=1.14.0,<1.15.0",
    "asyncpg>=0.30.0,<0.31.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.0,<0.26.0",
    "httpx>=0.28.1,<0.29.0",
    "ruff>=0.8.4,<0.9.0",
    "mypy>=1.14.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI's Depends() in argument defaults is idiomatic.

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
